mdapipkg/unpackaged/objects/Fortnite_Player_Data__c.object
<CustomObject>
    <fields>
        <fullName>Fortnite_Player__c</fullName>
        <label>Fortnite Player</label>
        <referenceTo>Fortnite_Player__c</referenceTo>
        <relationshipLabel>Fortnite Players Data</relationshipLabel>
        <relationshipName>Fortnite_Players_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>platform__c</fullName>
        <label>platform</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>pc</fullName>
                </value>
                <value>
                    <fullName>xb1</fullName>
                </value>
                <value>
                    <fullName>ps4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>stats__c</fullName>
        <description>The stats JSON, a simple kev-value map</description>
        <label>stats</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>totals__c</fullName>
        <description>The totals for the player, a simple key-value map</description>
        <label>totals</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>window__c</fullName>
        <description>The time period, including all time or specific seasons</description>
        <label>window</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>alltime</fullName>
                </value>
                <value>
                    <fullName>season6</fullName>
                </value>
                <value>
                    <fullName>season5</fullName>
                </value>
                <value>
                    <fullName>season4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Fortnite Player Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fortnite_Player__c</columns>
        <columns>platform__c</columns>
        <columns>stats__c</columns>
        <columns>totals__c</columns>
        <columns>window__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>dataname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fortnite Players Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>